[package]
name = "os_rust"
version = "0.1.0"
authors = ["boyuan"]
edition = "2018"

[dependencies]
bootloader = "0.3.5"
volatile = "0.2.3"
spin = "0.4.9"
array-init = "0.0.3"
uart_16550 = "0.1.0"
x86_64 = "0.4.0"
pic8259_simple = "0.1.1"
pc-keyboard = "0.3.1"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[package.metadata.bootimage]
default-target = "x86_64-os_rust.json"